--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.0+2
   shared_preferences: ^0.5.3+5
+  fluttertoast: ^3.1.3
 
 dev_dependencies:
   flutter_test:
