--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-custom: # ['https://paypal.me/RajpurohitAkash']
+custom: ['https://paypal.me/RajpurohitAkash']
